apps/sonarr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sonarr
  template:
    metadata:
      labels:
        run: sonarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: sonarr
          env: []
          image: linuxserver/sonarr
          name: sonarr
          ports:
            - containerPort: 8989
              name: webui
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:8989/sonarr/api/v3/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 60
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:8989/sonarr/api/v3/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            # - mountPath: "/config"
            #   name: config-old
            - mountPath: "/downloads"
              name: downloads
            - mountPath: "/media"
              name: media
            - mountPath: /config
              name: config
      volumes:
        # - name: config-old
        #   persistentVolumeClaim:
        #     claimName: sonarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-iscsi
