apps/sonarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
    name: webui
  selector:
    run: sonarr
